<resources>
    <string name="app_name">To Do List</string>
    <string name="new_task">Criar Tarefa</string>
    <string name="Update_task">Atualizar Tarefa</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="hour">Horário</string>
    <string name="cancel">Cancelar</string>
    <string name="tasks">Tarefas</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="view_description">Ver descrição</string>
    <string name="label_you_dont_tasks">Ops você não possui \nnenhuma tarefa</string>
</resources>